# epe

./: README.md  test.txt
GameServer/: CMakeLists.txt  accusation.cpp  accusation.h  charactercard.cpp  charactercard.h  clientconnection.cpp  clientconnection.h  envelope.cpp  envelope.h  gameboard.cpp  gameboard.h  gameserver.cpp  gameserver.h  main.cpp  move.cpp  move.h  networkplayer.h  player.cpp  player.h  room.h  roomcard.cpp  roomcard.h  servermessagebroker.cpp  servermessagebroker.h  serversession.cpp  serversession.h  suggestion.cpp  suggestion.h  weaponcard.cpp  weaponcard.h
GameServer/GameServer/: CMakeLists.txt  main.cpp
GameServer/GameServer/Classes/: Envelope.h  charactercard.cpp  gameserver.h
GameServer/build-GameServer-Boot2Qt_6_5_2_Intel_NUC-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
GameServer/build-GameServer-Boot2Qt_6_5_2_Intel_NUC-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-a0d7860744b0a816c37e.json  codemodel-v2-564f4844e0ef82e751a5.json  directory-.-Debug-df4cb1dc6f4d72528edb.json  index-2023-09-07T17-38-46-0666.json  target-all_qmllint-Debug-5e121aadc2cb30a9e07a.json  target-all_qmllint_json-Debug-104032358299214be639.json  target-appGameServer-Debug-f041e1b97d5521cb36b1.json  target-appGameServer_autogen-Debug-32511a52853fcf9f2800.json  target-appGameServer_autogen_timestamp_deps-Debug-c186a8740d6a684bdf32.json  target-appGameServer_qmlimportscan-Debug-91c8798f7fdac7a50c1a.json  (+1 more)
GameServer/build-GameServer-Boot2Qt_6_5_2_Intel_NUC-Debug/.qt/: QtDeploySupport.cmake
GameServer/build-GameServer-Boot2Qt_6_5_2_Intel_NUC-Debug/.qt/deploy_qml_imports/: appGameServer.cmake
GameServer/build-GameServer-Boot2Qt_6_5_2_Intel_NUC-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appGameServer.rsp
GameServer/build-GameServer-Boot2Qt_6_5_2_Intel_NUC-Debug/.rcc/: appGameServer_raw_qml_0.qrc  qmake_GameServer.qrc
GameServer/build-GameServer-Boot2Qt_6_5_2_Intel_NUC-Debug/.rcc/qmlcache/: appGameServer_qml_loader_file_list.rsp
GameServer/build-GameServer-Boot2Qt_6_5_2_Intel_NUC-Debug/GameServer/: appGameServer_qml_module_dir_map.qrc  qmldir
GameServer/build-GameServer-Boot2Qt_6_5_2_Intel_NUC-Debug/qmltypes/: appGameServer_foreign_types.txt
ServerRepo/: CMakeLists.txt  Player.h  accusation.cpp  (+6 more)
UnitTests/: CMakeLists.txt  CMakeLists.txt.user.acc23b9  envelope.cpp  gameserver.cpp  gameserver.h  move.cpp  player.cpp  player.h  room.h  signalsender.cpp  signalsender.h  suggestion.h  tst_unittest.cpp
cluedo_gui/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  CMakeLists.txt.user.9de9d21  CTestTestfile.cmake  GameScreen.qml  NoteBookItem.qml  Player.qml  StartScreen.qml  TestRunner.qml  build.ninja  client.cpp  client.h  clientmessagebroker.cpp  clientmessagebroker.h  clientmessagebroker_stub.cpp  cmake_install.cmake  main.cpp  main.qml  message.cpp  networkclient.cpp  networkclient.h  qtcsettings.cmake  testrunner.cpp  testrunner.h
cluedo_gui/.cmake/api/v1/reply/: cache-v2-364b0074e8b67e2d94aa.json  cmakeFiles-v1-8f8f3ee300f7c2928794.json  codemodel-v2-abe679a9a9982e8de7f1.json  index-2023-10-24T07-34-38-0410.json  target-cluedo_gui-Debug-a0bb99877414be6071b3.json  target-cluedo_gui_autogen-Debug-15c566d9d76a47137a9c.json  target-cluedo_gui_autogen_timestamp_deps-Debug-b6ce1f0d5e502287db43.json  target-cluedo_gui_qmlimportscan-Debug-be80d48ded8e435f7f61.json
cluedo_gui/.qt/: QtDeploySupport.cmake
cluedo_gui/.qt/deploy_qml_imports/: cluedo_gui.cmake
cluedo_gui/.qt_plugins/: Qt6_QmlPlugins_Imports_cluedo_gui.cmake  Qt6_QmlPlugins_Imports_cluedo_gui.rsp
cluedo_gui/.qtc_clangd/: compile_commands.json
cluedo_gui/.qtc_clangd/.cache/clangd/index/: QAbstractItemModel.CBB007936B313359.idx  QApplication.8354164771B21696.idx  QBrush.BA44A7C5E0A12D64.idx  QColor.6BC700E61BB6AC3C.idx  QDeadlineTimer.D9AEDD0089EE2197.idx  QDebug.A8B45819C276E6D0.idx  QEvent.4BE0BD8827C89AA1.idx  QFont.1043F63D52A67930.idx  QHash.4FF68FE841C66AC5.idx  QIcon.F8929B4478176889.idx  QImage.862710F978E2631E.idx  QInputDialog.09FC8C5327C112ED.idx  QJsonDocument.2AF87CEB1F5CBE08.idx  QList.742FA7066EB5EE23.idx  QMargins.8129F7B7B78BB1C0.idx  QMessageBox.1E78407261D8EC31.idx  QMetaEnum.CC0B3EBCDA500B40.idx  QMetaType.C2A7B730D5A3143F.idx  QMutex.52BBDDB55370B82E.idx  QNetworkCookie.8113E66975D4E853.idx  QNetworkReply.DD4221519BB2D631.idx  QObject.90F2FE1C29D4180A.idx  QPixmap.B1AF3D5FA92516C5.idx  QQmlApplicationEngine.68F854F26A848C80.idx  QQmlContext.A136DC7F96044E0C.idx  QRect.080C389828AF204B.idx  QSharedDataPointer.E5CC55BE5B9D224E.idx  QSize.CBEF3CD04CEDF0BB.idx  QSizeF.D0C85DD8F25C6369.idx  QSizePolicy.19E8C016AC321999.idx  QSslConfiguration.F74D554F967BDECC.idx  QString.2554E51E93E2A3E5.idx  QStringList.85DC745BB56830C0.idx  QTransform.B885CF5BCEDC3FA7.idx  QVariant.B1175F8B5844F5BC.idx  QVector.4FED4333E1D4F36E.idx  QtCore.3244F392437A33D9.idx  QtCoreDepends.558734DCAB867986.idx  QtQuickTest.C986F4431FCC7B71.idx  QtQuickTestDepends.9A6EAD404BFE86F0.idx  (+455 more)
cluedo_gui/.rcc/: qml.qrc  qrc_qml.cpp
cluedo_gui/cluedo_gui_autogen/: deps  moc_predefs.h
cluedo_gui/cluedo_gui_autogen/EWIEGA46WW/: moc_client.cpp  moc_client.cpp.d  moc_clientmessagebroker.cpp  moc_clientmessagebroker.cpp.d  moc_message.cpp  moc_message.cpp.d  moc_networkclient.cpp  moc_networkclient.cpp.d  moc_networkplayer.cpp  moc_networkplayer.cpp.d  moc_testrunner.cpp  moc_testrunner.cpp.d
cluedo_gui/cluedo_gui_autogen/include/: testrunner.moc.d
networking/networking/: CMakeLists.txt  CMakeLists.txt.user.b940950  CMakeLists.txt.user.de9cfd0  client.cpp  client.h  clientconnection.cpp  clientconnection.h  clientmessagebroker.cpp  clientmessagebroker.h  error.cpp  error.h  message.cpp  message.h  networkclient.cpp  networkplayer.cpp  networkplayer.h  player.cpp  player.h  servermessagebroker.cpp  servermessagebroker.h  serversession.cpp  serversession.h  testServerSession.cpp  testServerSession.h  testacking.cpp  testacking.h  testclient.cpp  testclient.h
test_cluedo_gui/: CMakeLists.txt  StartScreen.qml  client.cpp  client.h  main.cpp  main.qml  setup.cpp  setup.h  tst_demotests.qml
(+1106 files in other folders)
